Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 6.2.2, 6.3.0 Feature Freeze
-
Fix Version/s: 5.15.9, 6.3.0 Alpha, 6.4.0 Beta1
-
Component/s: GUI: Text handling
-
Labels:None
-
Commits:17dca04a61 (qt/qtbase/dev) 17dca04a61 (qt/tqtc-qtbase/dev) bedf6e33cc (qt/qtbase/6.3) bedf6e33cc (qt/tqtc-qtbase/6.3) 9b5208d87b (qt/tqtc-qtbase/5.15) bdf4f9340a (qt/qtbase/6.2) bdf4f9340a (qt/tqtc-qtbase/6.2)
Description
This is an annoyance in autotests, at least. Most real computers will have fixed-pitch fonts; but still.
Attachments
Issue Links
- relates to
-
QTBUG-99681 QTextEdit: multi-line monospace text is not written to proper markdown
-
- Reported
-
-
QTBUG-89819 tst_qmarkdown tests fail on QEMU ARMv7
-
- Closed
-
-
QTBUG-100515 tst_qtextmarkdownwriter fails on QNX
-
- Closed
-
- resulted from
-
QTBUG-103484 rich text gets converted to monospace in CI because QFontDatabase::GeneralFont is "Sans Serif" and is monospace
-
- Reported
-
-
QTBUG-54623 Linux/xcb/KDE 5.18: QFontDatabase::systemFont(QFontDatabase::FixedFont) returns proportional font
-
- Closed
-
-
QTBUG-75648 WinRT: QFontDatabase::systemFont(QFontDatabase::FixedFont) returns proportional font
-
- Closed
-
-
QTBUG-75649 Boot2Qt (QEMU): QFontDatabase::systemFont(QFontDatabase::FixedFont) returns proportional font
-
- Closed
-
- resulted in
-
QTBUG-100933 tst_QFontDatabase::systemFixedFont() fails on Wayland
-
- Closed
-