tests/auto/gui/text/qtextmarkdownimporter/tst_qtextmarkdownimporter.cpp
@@ -77,6 +77,7 @@ public:
         Mono = 0x10,
         Link = 0x20
     };
+    Q_ENUM(CharFormat)
     Q_DECLARE_FLAGS(CharFormats, CharFormat)
 };
 
@@ -364,13 +365,15 @@ void tst_QTextMarkdownImporter::nestedSpans()
                          << "underlined" << fmt.fontUnderline()
                          << "strikeout" << fmt.fontStrikeOut() << "anchor" << fmt.isAnchor()
                          << "monospace" << QFontInfo(fmt.font()).fixedPitch() // depends on installed fonts (QTBUG-75649)
-                                        << fmt.fontFixedPitch() // returns false even when font family is "monospace"
-                                        << fmt.hasProperty(QTextFormat::FontFixedPitch); // works
+                                        << fmt.fontFixedPitch()
+                                        << fmt.hasProperty(QTextFormat::FontFixedPitch)
+                         << "expected" << expectedFormat;
         QCOMPARE(fmt.fontWeight() > QFont::Normal, expectedFormat.testFlag(Bold));
         QCOMPARE(fmt.fontItalic(), expectedFormat.testFlag(Italic));
         QCOMPARE(fmt.fontUnderline(), expectedFormat.testFlag(Underlined));
         QCOMPARE(fmt.fontStrikeOut(), expectedFormat.testFlag(Strikeout));
         QCOMPARE(fmt.isAnchor(), expectedFormat.testFlag(Link));
+        QCOMPARE(fmt.fontFixedPitch(), expectedFormat.testFlag(Mono));
         QCOMPARE(fmt.hasProperty(QTextFormat::FontFixedPitch), expectedFormat.testFlag(Mono));
         ++iterator;
     }
